// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLogger should use console.log if no logger is provided 1`] = `
"2019_3_5-21:55:31-[abstract-express-router]-1-0-test test2 
{
  \\"test\\": \\"123\\"
} 
Error: test "
`;

exports[`createLogger should use console.log if no logger is provided 2`] = `
Array [
  "2019_3_5-21:55:31-[abstract-express-router]-3-0-test test2",
]
`;

exports[`createLogger should use console.log if no logger is provided 3`] = `
Array [
  "2019_3_5-21:55:31-[abstract-express-router]-2-0-test test2 error parsing item: [object Object] - TypeError: Converting circular structure to JSON",
]
`;

exports[`createLogger should use the provided logger 1`] = `
"test test2 
{
  \\"test\\": \\"123\\"
} 
Error: test "
`;

exports[`createLogger should use the provided logger 2`] = `
Array [
  Object {
    "level": 3,
    "message": "test test2",
    "requestId": 0,
  },
]
`;
